# yolkfolk

./: README.md  pyproject.toml
doc/: mu-cheatsheet.md
project/: ActorState.py  AnimatedActor.py  DizzyActor.py  animate_actor.py  game.py  requirements.txt  sandbox.py  settings.py  test.py
project/dizzy-3-5/: context.py  dialog.py  main.py  movement.py  settings.py  view.py
project/items/: __init__.py  bluediamond.py  item.py  jug.py  matches.py  startinghandle.py  sword.py
project/maps/: alien.json  dizzy-main-map.tmx  dizzy.3.5.tmx  magicland.csv  magicland.json  magicland.tmx  tiles2x.tsx
project/yolkfolk/: dialog.py
