[tool.poetry]
name = "Yolkfolk"
version = "0.0.1"
description = "Welcome to Yolkfolk!"
authors = ["mirek <miroslav.binas@tuke.sk>", "Mirka Filcakova <miroslava.filcakova@student.tuke.sk>", "Gabriel Adamcak <gabriel.adamcak@student.tuke.sk>"]
repository = "https://github.com/namakanyden/yolkfolk"
license = ""
readme = "README.md"
keywords = ["programming", "python"]

[tool.poetry.dependencies]
pgzero = ""
PyTMX = ""

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
